--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@ askama = { version = "0.12.0", features = ["with-axum"] }
 askama_axum = "0.3.0"
 axum = "0.6.20"
 flexi_logger = "0.26.0"
+log = "0.4.20"
+serde = { version = "1.0.188", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["full"] }
 tower-http = { version = "0.4.4", features = ["fs"] }
