--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ askama_axum = "0.3.0"
 axum = "0.6.20"
 flexi_logger = "0.26.0"
 log = "0.4.20"
+rand = "0.8.5"
 serde = { version = "1.0.188", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["full"] }
 tower-http = { version = "0.4.4", features = ["fs"] }
