--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
 askama = { version = "0.12.0", features = ["with-axum"] }
 askama_axum = "0.3.0"
-axum = "0.6.20"
+axum = { version = "0.6.20", features = ["macros"] }
 flexi_logger = "0.26.0"
 log = "0.4.20"
 rand = "0.8.5"
 serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.107"
 tokio = { version = "1.32.0", features = ["full"] }
-tower-http = { version = "0.4.4", features = ["fs"] }
+tower = { version = "0.4.13", features = ["full"] }
+tower-http = { version = "0.4.4", features = ["fs", "add-extension"] }
